Fixes layout issues with ColorPicker

--- a/src/components/BackgroundPicker/BackgroundPicker.css
+++ b/src/components/BackgroundPicker/BackgroundPicker.css
@@ -6,7 +6,7 @@
     bottom: 0.2em;
     border-radius: 0.3em;
     background-color: white;
-    box-shadow: 0px 1px 10px 0px #00000045;
+    box-shadow: 0px -2px 10px 2px #00000045;
     transform: rotate(2deg) !important;
     z-index: 2;
 }
@@ -19,6 +19,14 @@
 .background-picker input {
     border: none;
     background-color: rgba(128, 128, 128, 0.158);
+    color: gray;
+    font-family: inherit;
+    font-size: 1em;
+}
+
+.background-picker input:focus {
+    border-style: none;
+    outline: none;
 }
 
 .background-picker button {
